v0.2-->Our VideoWeb is integrated with Docker,and youcan use <docker compose up> to deploy this web server easily (need extra service FFmpeg)
